fix Cumulative Layout Shift issue

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -104,6 +104,7 @@ p {
 
 .col_3 img {
     width: 100%;
+    height: auto;
 }
 
 .small-container {
@@ -179,6 +180,8 @@ h4 {
 
 .col_2 .offer-img {
     padding: 50px;
+    width: 100%;
+    height: auto;
 }
 
 small {
@@ -827,6 +830,8 @@ input[type='search']::-webkit-search-cancel-button {
 
     .col_2 .home_img {
         margin-left: 15px;
+        width: 100%;
+        height: auto;
     }
 
     .cart-page {
